--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ input{
 }
 
 #deadline{
-    background-color: rgb(227, 146, 146);
+    background-color: #ed9b9b;
 }
 
 .task span {
@@ -142,6 +142,14 @@ input{
 
 .task button {
     position: relative; 
+}
+
+.task--warning {
+    background-color: #edd77f !important;
+}
+
+.task--expired {
+    background-color: #ed9b9b !important; 
 }
 
 .hover-info {
