drag-and drop bug fix

--- a/style.css
+++ b/style.css
@@ -579,10 +579,10 @@ input {
     color: white;
 }
 
-/* .alert-info {
+.alert-info {
     background-color: #2196F3;
     color: white;
-} */
+}
 
 .alert-warning {
     background-color: #ff9800;
