--- a/css/utilities.css
+++ b/css/utilities.css
@@ -49,3 +49,26 @@
     background-color: #ff9800;
     color: white;
 }
+
+.archived .tasks::-webkit-scrollbar {
+    width: 10px;
+}
+
+.archived .tasks::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+}
+
+.archived .tasks::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+.archived .tasks::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.archived .tasks {
+    scrollbar-width: thin;
+    scrollbar-color: #888 transparent;
+}
