--- a/css/utilities.css
+++ b/css/utilities.css
@@ -72,3 +72,26 @@
     scrollbar-width: thin;
     scrollbar-color: #888 transparent;
 }
+
+.list::-webkit-scrollbar {
+    width: 10px;
+}
+
+.list::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+}
+
+.list::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+.list::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.list {
+    scrollbar-width: thin;
+    scrollbar-color: #888 transparent;
+}
